[package]
name = "juner-gui"
version = "0.1.0"
authors = ["zhouzihao <1042181618@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6"
log = { version = "0.4", default-features = false, optional = true }
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.7.0"

[dev-dependencies]
embedded-graphics-simulator = "0.2"